# cren

./: .clang-tidy  .gitignore  CMakeLists.txt  Cren.toml  README.md  install.sh
.github/workflows/: artifacts.yaml  ci.yaml
doc/: index.md
doc/commands/: cren-build.md  cren-clean.md  cren-manifest.md  cren-new.md  cren-run.md  index.md
doc/config/: index.md
doc/get-started/: index.md
doc/guide/: create-new-package.md  dependencies.md  home.md  index.md  package-layout.md  tests.md  why-cren.md
doc/manifest/: index.md
include/: args.h  build.h  cren.h  cren_test.h  manifest.h
include/args/: build.h  clean.h  manifest.h  new.h  run.h
include/command/: build.h  clean.h  manifest.h  new.h  run.h
include/lib/: log.h  tinycthread.h  toml-c.h
include/manifest/: dependencies.h  error.h  features.h  package.h  path.h  targets.h
include/manifest/dependencies/: platform.h
include/manifest/package/: edition.h  language.h  (+2 more)
include/utils/: char_list.h  chars.h  cmd.h  env.h  fs.h  paths.h  string.h  string_list.h  terminal.h
lib/: optparse.h  toml-c.h
src/: args.c  build.c  cren.c  manifest.c
src/args/: build.c  clean.c  manifest.c  new.c  run.c
src/command/: build.c  clean.c  manifest.c  new.c  run.c
src/lib/: log.c  tinycthread.c
src/manifest/: dependencies.c  error.c  features.c  package.c  parser.c  path.c  serializer.c  targets.c
src/utils/: chars.c  cmd.c  env.c  fs.c  paths.c  string.c  string_list.c  terminal.c
tools/: get_licenses.py  license_const.py  license_from_str.py  license_to_string.py
tools/scripts/: mock_target_dir.sh
(+6 files in other folders)
